--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/CandidaturaInfos.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/CandidaturaInfos.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="anchorpane" stylesheets="@../Admin/admin.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.recrutamento.InfoCandidaturaController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="anchorpane" stylesheets="@../Admin/admin.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.recrutamento.InfoCandidaturaController">
    <children>
       <AnchorPane fx:id="tab_candidaturas" layoutX="26.0" layoutY="21.0" prefHeight="678.0" prefWidth="1228.0" styleClass="telaaction" stylesheets="@../Admin/admin.css" AnchorPane.bottomAnchor="21.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="21.0">
          <children>
@@ -31,6 +34,13 @@
                         <Font size="20.0" />
                      </font>
                   </Label>
+                  <HBox layoutX="14.0" layoutY="14.0" prefHeight="30.0" prefWidth="1202.0">
+                     <children>
+                        <TextField fx:id="barraPesquisar" prefHeight="30.0" prefWidth="973.0" promptText="Buscar" styleClass="lineedit" />
+                        <Separator prefHeight="8.0" prefWidth="95.0" visible="false" />
+                        <ComboBox fx:id="btn_filtrar" prefHeight="30.0" prefWidth="234.0" />
+                     </children>
+                  </HBox>
                </children>
             </AnchorPane>
          </children>
