--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
@@ -22,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="anchorpane" stylesheets="@../Admin/admin.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.recrutamento.CandidaturaController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="anchorpane" stylesheets="@../Admin/admin.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.recrutamento.CandidaturaController">
     <children>
         <AnchorPane layoutX="26.0" layoutY="21.0" prefHeight="678.0" prefWidth="1228.0" styleClass="telaaction" stylesheets="@../Admin/admin.css" AnchorPane.bottomAnchor="21.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="21.0">
             <children>
@@ -140,13 +135,14 @@
                                     </VBox>
                                  </children>
                               </AnchorPane>
-                              <AnchorPane fx:id="tab_entrevistas" layoutX="10.0" layoutY="10.0" prefHeight="639.0" prefWidth="1031.0" visible="false">
+                              <AnchorPane fx:id="tab_entrevistas" layoutX="10.0" layoutY="10.0" prefHeight="639.0" prefWidth="1031.0">
                                  <children>
                                     <TableView fx:id="tabEntrevistas" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="618.0" prefWidth="1031.0">
                                        <columns>
-                                          <TableColumn fx:id="colCandidato" editable="false" minWidth="-Infinity" prefWidth="347.0" resizable="false" text="Candidato" />
-                                          <TableColumn fx:id="colVagaEntrevistas" editable="false" minWidth="-Infinity" prefWidth="328.0" resizable="false" text="Vaga" />
-                                          <TableColumn fx:id="colDataEntrevista" editable="false" minWidth="-Infinity" prefWidth="404.0" resizable="false" text="Data" />
+                                          <TableColumn fx:id="colCandidato" editable="false" minWidth="-Infinity" prefWidth="280.0" resizable="false" text="Candidato" />
+                                          <TableColumn fx:id="colVagaEntrevistas" editable="false" minWidth="-Infinity" prefWidth="339.0" resizable="false" text="Vaga" />
+                                          <TableColumn fx:id="colDataEntrevista" editable="false" minWidth="-Infinity" prefWidth="213.0" resizable="false" text="Data" />
+                                          <TableColumn fx:id="colHoraEntrevista" editable="false" minWidth="-Infinity" prefWidth="179.0" resizable="false" text="Vaga" />
                                        </columns>
                                        <contextMenu>
                                           <ContextMenu>
