--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/TelinhaAux.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/TelinhaAux.fxml
@@ -12,37 +12,51 @@
    <children>
       <AnchorPane fx:id="apAgendarEntrevista" prefHeight="200.0" prefWidth="200.0" visible="false">
          <children>
-            <VBox alignment="CENTER" prefHeight="500.0" prefWidth="490.0">
-               <children>
-                  <Label alignment="CENTER" contentDisplay="TOP" prefHeight="73.0" prefWidth="466.0" text="Agendar Entrevista">
-                     <font>
-                        <Font name="System Bold" size="36.0" />
-                     </font>
-                  </Label>
-                  <Separator orientation="VERTICAL" prefHeight="127.0" prefWidth="3.0" visible="false" />
-                  <DatePicker fx:id="dpCalendario" prefHeight="36.0" prefWidth="234.0" />
-                  <Separator orientation="VERTICAL" prefHeight="30.0" prefWidth="0.0" visible="false" />
-                  <ChoiceBox fx:id="cbAvaliador" prefWidth="150.0" />
-                  <Label fx:id="lblNome" />
-                  <Separator orientation="VERTICAL" prefHeight="169.0" prefWidth="0.0" visible="false" />
-                  <HBox prefHeight="56.0" prefWidth="490.0">
-                     <children>
-                        <Separator prefWidth="50.0" visible="false" />
-                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onClickAgendarEntrevista" prefHeight="35.0" prefWidth="165.0" text="Agendar" textFill="WHITE">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Button>
-                        <Separator prefWidth="80.0" visible="false" />
-                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Cancelar" textFill="WHITE">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
+             <VBox alignment="CENTER" prefHeight="500.0" prefWidth="490.0">
+                 <children>
+                     <Label alignment="CENTER" contentDisplay="TOP" prefHeight="73.0" prefWidth="466.0" text="Agendar Entrevista">
+                         <font>
+                             <Font name="System Bold" size="36.0" />
+                         </font>
+                     </Label>
+
+                     <Separator orientation="VERTICAL" prefHeight="50.0" prefWidth="3.0" visible="false" />
+
+                     <DatePicker fx:id="dpCalendario" prefHeight="36.0" prefWidth="234.0" />
+
+                     <Separator orientation="VERTICAL" prefHeight="25.0" prefWidth="0.0" visible="false" />
+                     <HBox alignment="CENTER" prefHeight="40.0" prefWidth="234.0" spacing="10.0">
+                         <children>
+                             <Label text="Hora:" />
+                             <ChoiceBox fx:id="cbHora" prefWidth="75.0" />
+                             <Label text="Minuto:" />
+                             <ChoiceBox fx:id="cbMinuto" prefWidth="75.0" />
+                         </children>
+                     </HBox>
+                     <Separator orientation="VERTICAL" prefHeight="25.0" prefWidth="0.0" visible="false" />
+                     <ChoiceBox fx:id="cbAvaliador" prefWidth="150.0" />
+                     <Label fx:id="lblNome" />
+
+                     <Separator orientation="VERTICAL" prefHeight="50.0" prefWidth="0.0" visible="false" />
+
+                     <HBox prefHeight="56.0" prefWidth="490.0">
+                         <children>
+                             <Separator prefWidth="50.0" visible="false" />
+                             <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onClickAgendarEntrevista" prefHeight="35.0" prefWidth="165.0" text="Agendar" textFill="WHITE">
+                                 <font>
+                                     <Font size="14.0" />
+                                 </font>
+                             </Button>
+                             <Separator prefWidth="80.0" visible="false" />
+                             <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="165.0" text="Cancelar" textFill="WHITE">
+                                 <font>
+                                     <Font size="14.0" />
+                                 </font>
+                             </Button>
+                         </children>
+                     </HBox>
+                 </children>
+             </VBox>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="apEditarStatusCandidatura" layoutY="-1.0" prefHeight="511.0" prefWidth="500.0" visible="false">
