--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
@@ -31,13 +31,12 @@
                       <Button fx:id="vagas_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#abrirVagas" prefHeight="35.0" prefWidth="165.0" text="Vagas" textFill="WHITE" />
                         <Button fx:id="pedidos_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#abrirContratacoes" prefHeight="35.0" prefWidth="165.0" text="Pedidos de Contrataçao" textFill="WHITE" />
                         <Button fx:id="btn_gerarR" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#gerarRelatorio" prefHeight="35.0" prefWidth="165.0" text="Gerar Relatorio" textFill="WHITE" />
-                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#gerarf" prefHeight="35.0" prefWidth="165.0" text="Gerar Folha de Pagamento" textFill="WHITE">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#gerarFolhadpag" prefHeight="35.0" prefWidth="165.0" text="Gerar Folha de Pagamento" textFill="WHITE">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Button>
-                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#exporterma" prefHeight="35.0" prefWidth="165.0" text="Exportar Folha" textFill="WHITE" />
-                        <Region prefHeight="400.0" prefWidth="165.0" />
+                         <Region prefHeight="400.0" prefWidth="165.0" />
                         <Button fx:id="btn_sair" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sair" prefHeight="35.0" prefWidth="165.0" text="Sair" textFill="WHITE" />
                      </children>
                   </VBox>
